--- a/index.html
+++ b/index.html
@@ -1,67 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>VYSE - Our Services</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HR Services | VYSE</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <!-- Header -->
   <header>
     <div class="container">
-      <h1 class="logo">VYSE</h1>
+      <h1 class="logo">VYSE HR</h1>
       <nav>
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
+        <a href="recruiting.html">Recruiting Services</a>
         <a href="contact.html">Contact</a>
       </nav>
     </div>
   </header>
 
-  <!-- Hero -->
-  <section class="hero">
+  <main class="hero">
     <div class="container">
-      <h2>Empowering Businesses with Smart Solutions</h2>
-      <p>Your one-stop shop for digital, recruitment, and cybersecurity services.</p>
-      <a href="#services" class="btn">Explore Services</a>
+      <h2>Welcome to VYSE HR Services</h2>
+      <p>Your trusted partner for recruitment, staffing, and HR solutions.</p>
     </div>
-  </section>
+  </main>
 
-  <!-- Services Menu -->
-  <section id="services">
+  <section class="intro">
     <div class="container">
-      <h2>Our Services</h2>
-      <div class="services-menu">
-        <a href="recruiting.html">Recruiting Services</a>
-        <a href="software.html">Software Services</a>
-        <a href="vapt.html">VAPT & Bug Bounty</a>
-        <a href="webdev.html">Web/App Development</a>
-        <a href="marketing.html">Digital Marketing</a>
-        <a href="payroll.html">Payroll & CA Services</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- Contact -->
-  <section id="contact">
-    <div class="container">
-      <h2>Contact Us</h2>
-      <form>
-        <input type="text" placeholder="Your Name" required />
-        <input type="email" placeholder="Your Email" required />
-        <textarea placeholder="Your Message" rows="5" required></textarea>
-        <button type="submit">Send</button>
-      </form>
+      <h3>Explore Our Services</h3>
+      <p>From candidate sourcing to onboarding and payroll support, our HR division is equipped to handle end-to-end human resources for startups and enterprises.</p>
+      <a href="recruiting.html" class="btn">Learn More</a>
     </div>
   </section>
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 VYSE All rights reserved.</p>
+      <p>&copy; 2025 VYSE HR. All rights reserved.</p>
     </div>
   </footer>
-
 </body>
 </html>
