--- a/recruiting.html
+++ b/recruiting.html
@@ -3,15 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Recruiting Services | VYSE</title>
-  <link rel="stylesheet" href="../style.css">
+  <title>Recruiting Services | VYSE HR</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <div class="container">
-      <h1 class="logo">VYSE</h1>
+      <h1 class="logo">VYSE HR</h1>
       <nav>
-        <a href="../index.html">Home</a>
+        <a href="index.html">Home</a>
+        <a href="recruiting.html">Recruiting Services</a>
+        <a href="contact.html">Contact</a>
       </nav>
     </div>
   </header>
@@ -19,19 +21,19 @@
   <main class="service-detail">
     <div class="container">
       <h2>Recruiting Services</h2>
-      <p>We specialize in identifying and placing top-tier talent across industries. Our team provides end-to-end recruitment solutions including job description creation, candidate sourcing, interview coordination, and final placement. Whether you're scaling a startup or expanding your enterprise team, VYSE ensures you get the right talent at the right time.</p>
+      <p>We specialize in identifying and placing top-tier talent across industries. From sourcing to onboarding, our recruitment solutions are streamlined and scalable for startups and enterprises alike.</p>
       <ul>
-        <li>End-to-end recruitment support</li>
-        <li>Candidate screening and onboarding</li>
-        <li>Executive and niche role hiring</li>
-        <li>Flexible hiring models (contract/permanent)</li>
+        <li>End-to-end recruitment (sourcing to joining)</li>
+        <li>Campus hiring and fresh talent programs</li>
+        <li>Contract staffing and remote hiring</li>
+        <li>Onboarding and background verification</li>
       </ul>
     </div>
   </main>
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 VYSE All rights reserved.</p>
+      <p>&copy; 2025 VYSE HR. All rights reserved.</p>
     </div>
   </footer>
 </body>
